[gd_scene load_steps=20 format=4 uid="uid://bholw7u5e0fys"]

[ext_resource type="Texture2D" uid="uid://b7xtv41v2owb7" path="res://assets/pixel_art/ground_tilemap.png" id="1_5oyxh"]
[ext_resource type="Script" path="res://scenes/village/tournament.gd" id="1_djs07"]
[ext_resource type="Texture2D" uid="uid://dmovpodcvb31q" path="res://assets/pixel_art/interior.png" id="2_s4epl"]
[ext_resource type="Texture2D" uid="uid://0qf58blmjdf0" path="res://assets/pixel_art/witch_house.png" id="3_epw6o"]
[ext_resource type="Texture2D" uid="uid://nl3x7it272hp" path="res://assets/pixel_art/wood_house.png" id="4_lmmi6"]
[ext_resource type="Texture2D" uid="uid://bxor1m86nwwsj" path="res://assets/pixel_art/roof.png" id="5_v84lh"]
[ext_resource type="Texture2D" uid="uid://bt6g12jrpi3d8" path="res://assets/pixel_art/roof_witch.png" id="6_78muv"]
[ext_resource type="FontFile" uid="uid://bbboar44j52e8" path="res://assets/HappyHalloween.ttf" id="8_4juhy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7yf4t"]
texture = ExtResource("1_5oyxh")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -8)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -8)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -8)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, -8)
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, -8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -8)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -8)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -8)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -8)
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, -8)
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, -8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -8)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -8)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -8)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -8)
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, -8)
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, -8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, -8)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x88sa"]
texture = ExtResource("2_s4epl")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_42ak8"]
texture = ExtResource("3_epw6o")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -8)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -8)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -8)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_28r13"]
texture = ExtResource("4_lmmi6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -8)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -8)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -8)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -8)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -8)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -8)
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -8)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -8)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -8)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -8)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ajfw"]
texture = ExtResource("5_v84lh")
texture_region_size = Vector2i(32, 16)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nu2sk"]
texture = ExtResource("6_78muv")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_1wm5l"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_7yf4t")
sources/2 = SubResource("TileSetAtlasSource_x88sa")
sources/3 = SubResource("TileSetAtlasSource_42ak8")
sources/4 = SubResource("TileSetAtlasSource_28r13")
sources/5 = SubResource("TileSetAtlasSource_3ajfw")
sources/6 = SubResource("TileSetAtlasSource_nu2sk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kw6jo"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1j74r"]
bg_color = Color(0.976471, 0.45098, 0, 1)
border_width_bottom = 5
border_color = Color(0.321569, 0.298039, 0.258824, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 3
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.625

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_burk8"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_cksgg"]
default_font = ExtResource("8_4juhy")
default_font_size = 32
Button/styles/hover = SubResource("StyleBoxFlat_kw6jo")
Button/styles/normal = SubResource("StyleBoxFlat_1j74r")
Button/styles/pressed = SubResource("StyleBoxFlat_burk8")

[node name="tournament" type="Node2D"]
script = ExtResource("1_djs07")

[node name="levels" type="Node2D" parent="."]
position = Vector2(-140, -56)
scale = Vector2(1.2, 1.2)

[node name="1" type="TileMapLayer" parent="levels"]
tile_map_data = PackedByteArray("AAA5AAMAAAAAAAQAAAA5AAQAAAAEAAEAAAA5AAUAAAAAAAAAAAA6AAMAAAAFAAEAAAA6AAQAAAAEAAIAAAA6AAUAAAAAAAAAAAA7AAMAAAAAAAAAAAA7AAQAAAAAAAAAAAA7AAUAAAAAAAAAAAA1AP//AAAAAAAAAAA1AAAAAAAAAAAAAAA1AAEAAAABAAAAAAA1AAIAAAAAAAAAAAA1AAMAAAAAAAAAAAA1AAQAAAAAAAAAAAA1AAUAAAAAAAAAAAA2AP//AAAAAAAAAAA2AAAAAAABAAMAAAA2AAEAAAACAAMAAAA2AAIAAAACAAMAAAA2AAMAAAACAAMAAAA2AAQAAAAFAAIAAAA2AAUAAAAAAAAAAAA3AP//AAADAAAAAAA3AAAAAAADAAMAAAA3AAEAAAAEAAMAAAA3AAIAAAADAAEAAAA3AAMAAAABAAQAAAA3AAQAAAAEAAEAAAA3AAUAAAAEAAAAAAA4AP//AAAAAAAAAAA4AAAAAAADAAMAAAA4AAEAAAACAAEAAAA4AAIAAAACAAEAAAA4AAMAAAACAAEAAAA4AAQAAAAEAAEAAAA4AAUAAAAAAAAAAAA5AP//AAAAAAAAAAA5AAAAAAADAAMAAAA5AAEAAAAFAAMAAAA5AAIAAAADAAEAAAA6AP//AAAAAAAAAAA6AAAAAAAAAAMAAAA6AAEAAAAFAAEAAAA6AAIAAAAFAAEAAAA7AP//AAAAAAAAAAA7AAAAAAAAAAAAAAA7AAEAAAAAAAAAAAA7AAIAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_1wm5l")

[node name="2" type="TileMapLayer" parent="levels"]
tile_map_data = PackedByteArray("AAA1AP//BAAAAAMAAAA1AAAABAAAAAEAAAA2AP//BAAAAAMAAAA2AAAABAAAAAMAAAAwAPr/BAAAAAMAAAAwAPv/BAAAAAMAAAAwAPz/BAAAAAMAAAAwAP3/BAAAAAMAAAAwAP7/BAAAAAMAAAAwAP//BAAAAAMAAAAwAAAABAAAAAMAAAAxAPr/BAAAAAMAAAAxAPv/BAAAAAMAAAAxAPz/BAAAAAMAAAAxAP3/BAAAAAMAAAAxAP7/BAAAAAMAAAAxAP//BAAAAAMAAAAxAAAABAAAAAMAAAAyAPr/BAAAAAMAAAAyAPv/BAAAAAMAAAAyAPz/BAAAAAMAAAAyAP3/BAAAAAMAAAAyAP7/BAAAAAMAAAAyAP//BAAAAAMAAAAyAAAABAAAAAMAAAAzAPr/BAAAAAMAAAAzAPv/BAAAAAMAAAAzAPz/BAAAAAMAAAAzAP3/BAAAAAMAAAAzAP7/BAAAAAMAAAAzAP//BAAAAAMAAAAzAAAABAAAAAMAAAA0APr/BAAAAAMAAAA0APv/BAAAAAMAAAA0APz/BAAAAAMAAAA0AP3/BAAAAAMAAAA0AP7/BAAAAAMAAAA0AP//BAAAAAMAAAA0AAAABAAAAAMAAAA1APr/BAAAAAMAAAA1APv/BAAAAAMAAAA1APz/BAAAAAMAAAA1AP3/BAAAAAMAAAA1AP7/BAAAAAMAAAA2APr/BAAAAAMAAAA2APv/BAAAAAMAAAA2APz/BAADAAAAAAA2AP3/BAAAAAMAAAA2AP7/BAAAAAMAAAA=")
tile_set = SubResource("TileSet_1wm5l")

[node name="3" type="TileMapLayer" parent="levels"]
tile_map_data = PackedByteArray("AAAwAPr/BAACAAMAAAAwAPv/BAACAAMAAAAxAPr/BAACAAMAAAAxAPv/BAACAAMAAAArAPX/BAACAAMAAAArAPb/BAACAAMAAAArAPf/BAACAAMAAAArAPj/BAACAAMAAAArAPn/BAACAAMAAAArAPr/BAACAAMAAAArAPv/BAACAAMAAAAsAPX/BAACAAMAAAAsAPb/BAACAAMAAAAsAPf/BAACAAMAAAAsAPj/BAACAAMAAAAsAPn/BAACAAMAAAAsAPr/BAACAAMAAAAsAPv/BAACAAMAAAAtAPX/BAACAAMAAAAtAPb/BAACAAMAAAAtAPf/BAACAAMAAAAtAPj/BAACAAMAAAAtAPn/BAACAAMAAAAtAPr/BAACAAMAAAAtAPv/BAACAAMAAAAuAPX/BAACAAMAAAAuAPb/BAACAAMAAAAuAPf/BAACAAMAAAAuAPj/BAACAAMAAAAuAPn/BAACAAMAAAAuAPr/BAACAAMAAAAuAPv/BAACAAMAAAAvAPX/BAACAAMAAAAvAPb/BAACAAMAAAAvAPf/BAACAAMAAAAvAPj/BAACAAMAAAAvAPn/BAACAAMAAAAvAPr/BAACAAMAAAAvAPv/BAACAAMAAAAwAPX/BAACAAMAAAAwAPb/BAACAAMAAAAwAPf/BAACAAMAAAAwAPj/BAACAAMAAAAwAPn/BAACAAMAAAAxAPX/BAACAAMAAAAxAPb/BAACAAMAAAAxAPf/BAACAAMAAAAxAPj/BAACAAMAAAAxAPn/BAACAAMAAAA=")
tile_set = SubResource("TileSet_1wm5l")

[node name="4" type="TileMapLayer" parent="levels"]
tile_map_data = PackedByteArray("AAArAPX/AwADAAAAAAArAPb/AwABAAAAAAAsAPX/AwADAAAAAAAsAPb/AwABAAAAAAAmAPD/AwACAAAAAAAmAPH/AwACAAAAAAAmAPL/AwACAAAAAAAmAPP/AwACAAAAAAAmAPT/AwACAAAAAAAmAPX/AwACAAAAAAAmAPb/AwABAAAAAAAnAPD/AwACAAAAAAAnAPH/AwACAAAAAAAnAPL/AwACAAAAAAAnAPP/AwACAAAAAAAnAPT/AwACAAAAAAAnAPX/AwACAAAAAAAnAPb/AwAAAAEAAAAoAPD/AwAAAAAAAAAoAPH/AwABAAAAAAAoAPL/AwACAAAAAAAoAPP/AwACAAAAAAAoAPT/AwACAAAAAAAoAPX/AwACAAAAAAAoAPb/AwABAAAAAAApAPD/AwABAAAAAAApAPH/AwABAAAAAAApAPL/AwACAAAAAAApAPP/AwACAAAAAAApAPT/AwACAAAAAAApAPX/AwACAAAAAAApAPb/AwAAAAEAAAAqAPD/AwACAAAAAAAqAPH/AwABAAAAAAAqAPL/AwACAAAAAAAqAPP/AwACAAAAAAAqAPT/AwACAAAAAAAqAPX/AwACAAAAAAAqAPb/AwABAAAAAAArAPD/AwACAAAAAAArAPH/AwACAAAAAAArAPL/AwACAAAAAAArAPP/AwADAAAAAAArAPT/AwADAAAAAAAsAPD/AwABAAAAAAAsAPH/AwADAAIAAAAsAPL/AwABAAAAAAAsAPP/AwABAAAAAAAsAPT/AwABAAAAAAA=")
tile_set = SubResource("TileSet_1wm5l")

[node name="5" type="TileMapLayer" parent="levels"]
tile_map_data = PackedByteArray("AAAmAPD/BgAAAAAAAAAmAPH/BgAAAAAAAAAnAPD/BgAAAAAAAAAnAPH/BgAAAAAAAAAhAOv/BgAAAAAAAAAhAOz/BgAAAAAAAAAhAO3/BgAAAAAAAAAhAO7/BgAAAAAAAAAhAO//BgAAAAAAAAAhAPD/BgAAAAAAAAAhAPH/BgAAAAAAAAAiAOv/BgAAAAAAAAAiAOz/BgAAAAAAAAAiAO3/BgAAAAAAAAAiAO7/BgAAAAAAAAAiAO//BgAAAAAAAAAiAPD/BgAAAAAAAAAiAPH/BgAAAAAAAAAjAOv/BgAAAAAAAAAjAOz/BgAAAAAAAAAjAO3/BgAAAAAAAAAjAO7/BgAAAAAAAAAjAO//BgAAAAAAAAAjAPD/BgAAAAAAAAAjAPH/BgAAAAAAAAAkAOv/BgAAAAAAAAAkAOz/BgAAAAAAAAAkAO3/BgAAAAAAAAAkAO7/BgAAAAAAAAAkAO//BgAAAAAAAAAkAPD/BgAAAAAAAAAkAPH/BgAAAAAAAAAlAOv/BgAAAAAAAAAlAOz/BgAAAAAAAAAlAO3/BgAAAAAAAAAlAO7/BgAAAAAAAAAlAO//BgAAAAAAAAAlAPD/BgAAAAAAAAAlAPH/BgAAAAAAAAAmAOv/BgAAAAAAAAAmAOz/BgAAAAAAAAAmAO3/BgAAAAAAAAAmAO7/BgAAAAAAAAAmAO//BgAAAAAAAAAnAOv/BgAAAAAAAAAnAOz/BgAAAAAAAAAnAO3/BgAAAAAAAAAnAO7/BgAAAAAAAAAnAO//BgAAAAAAAAA=")
tile_set = SubResource("TileSet_1wm5l")

[node name="div" type="ColorRect" parent="."]
offset_left = 137.0
offset_top = 74.0
offset_right = 697.0
offset_bottom = 352.0
color = Color(0.176471, 0.176471, 0.266667, 0.717647)

[node name="enemy_img" type="TextureRect" parent="div"]
layout_mode = 0
offset_left = 38.0
offset_top = -42.0
offset_right = 173.0
offset_bottom = 228.0

[node name="level_nb" type="Label" parent="div"]
layout_mode = 0
offset_left = 356.0
offset_top = 33.0
offset_right = 535.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("8_4juhy")
theme_override_font_sizes/font_size = 64
text = "level 1"

[node name="enemy_nb" type="Label" parent="div"]
layout_mode = 0
offset_left = 173.0
offset_top = 100.0
offset_right = 292.0
offset_bottom = 194.0
theme_override_fonts/font = ExtResource("8_4juhy")
theme_override_font_sizes/font_size = 64

[node name="exit" type="Button" parent="."]
offset_left = 12.0
offset_top = 13.0
offset_right = 106.0
offset_bottom = 61.0
theme = SubResource("Theme_cksgg")
text = "EXIT"

[node name="play" type="Button" parent="."]
offset_left = 322.0
offset_top = 427.0
offset_right = 510.0
offset_bottom = 519.0
theme = SubResource("Theme_cksgg")
text = "PLAY"

[node name="team_size" type="Label" parent="."]
offset_left = 11.0
offset_top = 598.0
offset_right = 457.0
offset_bottom = 644.0
theme_override_fonts/font = ExtResource("8_4juhy")
theme_override_font_sizes/font_size = 32
text = "You have figurines in your team"
